--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,19 @@
 {
-  "name": "server",
+  "name": "vitastore-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
+  "engines": {
+    "node": "13.3.0",
+    "yarn": "1.19.1"
+  },
+  "scripts": {
+    "start": "node src/app.js"
+  },
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
