--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "yarn": "1.19.1"
   },
   "scripts": {
-    "start": "node src/app.js"
+    "start:server": "node src/app.js"
   },
   "license": "MIT",
   "dependencies": {
