--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dialogflow": "^1.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
