--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "yarn": "1.19.1"
   },
   "scripts": {
-    "start:server": "node src/app.js"
+    "start:server": "nodemon src/app.js",
+    "start:client": "cd ../client && yarn start",
+    "start:dev": "concurrently \"yarn start:server\" \"yarn  start:client\""
   },
   "license": "MIT",
   "dependencies": {
@@ -16,6 +18,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "concurrently": "^5.0.2",
     "nodemon": "^2.0.2"
   }
 }
