--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dialogflow": "^1.0.0",
     "express": "^4.17.1"
   },
